--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>This is a Local Project</h1>
+    <h2>This is a new feature</h2>
+    <div>Add new feature to the app
+        <p>Type</p>
+        <P>Role</P>
+    </div>
 </body>
 </html>
